// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`gen-vue > renders the Button SFC 1`] = `
"<!-- AUTOGENERATED by gen-vue. Do not edit. -->
<!-- Source: specs/button.yaml -->
<script setup lang="ts">
/**
 * A trigger that performs an action when activated.
 *
 * @example Solid Primary
 * \`\`\`vue
 * <Button variant="solid" intent="primary">Label</Button>
 * \`\`\`
 *
 * @example Solid Danger Md
 * \`\`\`vue
 * <Button variant="solid" intent="danger" size="md">Label</Button>
 * \`\`\`
 *
 * @example Outline Neutral
 * \`\`\`vue
 * <Button variant="outline" intent="neutral">Label</Button>
 * \`\`\`
 */
import "@teseor/css/components/button.css";
import { computed, type VNode } from "vue";
import { type Responsive, responsiveDataAttrs } from "./_runtime.ts";

type ButtonVariant = "solid" | "outline" | "ghost" | "link";

type ButtonIntent = "primary" | "neutral" | "success" | "warning" | "danger" | "info";

type ButtonSize = "sm" | "md" | "lg";

type ButtonAs = "button" | "a";

type ButtonProps = {
  /** Visual style. */
  variant?: ButtonVariant;
  /** Semantic color. */
  intent?: ButtonIntent;
  /** Size scale. */
  size?: Responsive<ButtonSize>;
  /** Polymorphic root element. Defaults to \`button\`; set to \`a\` for link-shaped triggers (paired with \`variant: link\`). */
  as?: ButtonAs;
  /** Disables interaction and applies the disabled visual state. Mapped to the native \`disabled\` attribute on \`button\`, \`aria-disabled="true"\` otherwise. */
  disabled?: boolean;
  /** Shows a spinner in place of the label and disables interaction. The original label stays in the accessibility tree. */
  loading?: boolean;
  /** Stretches the button to the inline-size of its container. Responsive so layouts can pin block-width on mobile and shrink to content above. */
  block?: Responsive<boolean>;
};

const {
  variant,
  intent,
  size,
  as = "button",
  disabled = false,
  loading = false,
  block = false,
} = defineProps<ButtonProps>();

defineSlots<{
  default?(): VNode[];
  iconStart?(): VNode[];
  iconEnd?(): VNode[];
}>();

const isButton = computed(() => as === "button");
const inactive = computed(() => disabled || loading);

const attrs = computed(() => ({
  "data-variant": variant,
  "data-intent": intent,
  ...responsiveDataAttrs("size", size),
  ...responsiveDataAttrs("block", block),
  "data-loading": loading ? "true" : undefined,
  disabled: isButton.value ? inactive.value : undefined,
  "aria-disabled": !isButton.value && inactive.value ? "true" : undefined,
  "aria-busy": loading ? "true" : undefined,
}));
</script>

<template>
  <component :is="as" class="t-button" v-bind="attrs">
    <span v-if="$slots.iconStart" data-button-icon="" data-position="start">
      <slot name="iconStart" />
    </span>
    <span data-button-label=""><slot /></span>
    <span v-if="$slots.iconEnd" data-button-icon="" data-position="end">
      <slot name="iconEnd" />
    </span>
    <span v-if="loading" data-button-spinner="" aria-hidden="true" />
  </component>
</template>
"
`;

exports[`gen-vue > renders the Cluster SFC with multiple enum-typed props 1`] = `
"<!-- AUTOGENERATED by gen-vue. Do not edit. -->
<!-- Source: specs/cluster.yaml -->
<script setup lang="ts">
/**
 * A horizontal layout primitive. Wraps children on the inline axis with consistent spacing.
 *
 * @example Gap 3
 * \`\`\`vue
 * <Cluster gap="3">Label</Cluster>
 * \`\`\`
 *
 * @example Gap 0
 * \`\`\`vue
 * <Cluster gap="0">Label</Cluster>
 * \`\`\`
 *
 * @example Justify Between
 * \`\`\`vue
 * <Cluster gap="3" justify="between">Label</Cluster>
 * \`\`\`
 */
import "@teseor/css/components/cluster.css";
import { computed, type VNode } from "vue";
import { type Responsive, responsiveDataAttrs } from "./_runtime.ts";

type ClusterAlign = "start" | "center" | "end" | "stretch" | "baseline";

type ClusterJustify = "start" | "center" | "end" | "between" | "around";

type ClusterProps = {
  /** Spacing between children. Accepts a token suffix from the \`--t-space-*\` scale (\`0\`–\`8\`). */
  gap?: Responsive<string>;
  /** Block-axis alignment of children. */
  align?: Responsive<ClusterAlign>;
  /** Inline-axis distribution of children. */
  justify?: Responsive<ClusterJustify>;
};

const {
  gap,
  align,
  justify,
} = defineProps<ClusterProps>();

defineSlots<{
  default?(): VNode[];
}>();



const attrs = computed(() => ({
  ...responsiveDataAttrs("gap", gap),
  ...responsiveDataAttrs("align", align),
  ...responsiveDataAttrs("justify", justify),
}));
</script>

<template>
  <div class="t-cluster" v-bind="attrs">
    <slot />
  </div>
</template>
"
`;

exports[`gen-vue > renders the Stack SFC with an enum-typed prop 1`] = `
"<!-- AUTOGENERATED by gen-vue. Do not edit. -->
<!-- Source: specs/stack.yaml -->
<script setup lang="ts">
/**
 * A vertical layout primitive. Stacks children on the block axis with consistent spacing.
 *
 * @example Gap 3
 * \`\`\`vue
 * <Stack gap="3">Label</Stack>
 * \`\`\`
 *
 * @example Gap 0
 * \`\`\`vue
 * <Stack gap="0">Label</Stack>
 * \`\`\`
 *
 * @example Align Center
 * \`\`\`vue
 * <Stack gap="4" align="center">Label</Stack>
 * \`\`\`
 */
import "@teseor/css/components/stack.css";
import { computed, type VNode } from "vue";
import { type Responsive, responsiveDataAttrs } from "./_runtime.ts";

type StackAlign = "start" | "center" | "end" | "stretch";

type StackProps = {
  /** Spacing between children. Accepts a token suffix from the \`--t-space-*\` scale (\`0\`–\`8\`). */
  gap?: Responsive<string>;
  /** Inline-axis alignment of children. */
  align?: Responsive<StackAlign>;
};

const {
  gap,
  align,
} = defineProps<StackProps>();

defineSlots<{
  default?(): VNode[];
}>();



const attrs = computed(() => ({
  ...responsiveDataAttrs("gap", gap),
  ...responsiveDataAttrs("align", align),
}));
</script>

<template>
  <div class="t-stack" v-bind="attrs">
    <slot />
  </div>
</template>
"
`;

exports[`gen-vue > renders the barrel 1`] = `
"// AUTOGENERATED by gen-vue. Do not edit.

export { default as Button } from "./Button.vue";
"
`;

exports[`gen-vue > renders the runtime helper 1`] = `
"// AUTOGENERATED by gen-vue. Do not edit.

import { onBeforeUnmount, onMounted, type Ref, ref } from "vue";

const RESPONSIVE_KEYS = ["base", "md", "lg", "xl", "2xl"] as const;

type Breakpoint = (typeof RESPONSIVE_KEYS)[number];

export type Responsive<T> = T | Partial<Record<Breakpoint, T>>;

// matchMedia queries baked from specs/_breakpoints.yaml. Single source.
const BREAKPOINT_QUERIES: Partial<Record<Breakpoint, string>> = {
  md: "(min-width: 48rem)",
  lg: "(min-width: 64rem)",
  xl: "(min-width: 80rem)",
  "2xl": "(min-width: 96rem)",
};

function readActiveBreakpoint(): Breakpoint {
  if (typeof window === "undefined" || typeof window.matchMedia !== "function") return "base";
  for (let i = RESPONSIVE_KEYS.length - 1; i > 0; i--) {
    const key = RESPONSIVE_KEYS[i];
    if (!key) continue;
    const q = BREAKPOINT_QUERIES[key];
    if (q && window.matchMedia(q).matches) return key;
  }
  return "base";
}

/** Reactive active-breakpoint key. Drives \`Responsive<T>\` runtime behavior. */
export function useActiveBreakpoint(): Readonly<Ref<Breakpoint>> {
  const active = ref<Breakpoint>(readActiveBreakpoint());
  const cleanups: Array<() => void> = [];
  onMounted(() => {
    if (typeof window === "undefined" || typeof window.matchMedia !== "function") return;
    const onChange = () => {
      active.value = readActiveBreakpoint();
    };
    for (const key of RESPONSIVE_KEYS) {
      if (key === "base") continue;
      const q = BREAKPOINT_QUERIES[key];
      if (!q) continue;
      const mql = window.matchMedia(q);
      mql.addEventListener("change", onChange);
      cleanups.push(() => mql.removeEventListener("change", onChange));
    }
  });
  onBeforeUnmount(() => {
    for (const fn of cleanups) fn();
  });
  return active;
}

/** Resolve a \`Responsive<boolean>\` at the active breakpoint (mobile-first cascade). */
export function isActiveAt(value: unknown, bp: Breakpoint): boolean {
  if (value === true) return true;
  if (value == null || value === false) return false;
  if (typeof value !== "object") return false;
  const obj = value as Partial<Record<Breakpoint, boolean>>;
  const idx = RESPONSIVE_KEYS.indexOf(bp);
  for (let i = idx; i >= 0; i--) {
    const key = RESPONSIVE_KEYS[i];
    if (key && key in obj) return obj[key] === true;
  }
  return false;
}

/** Resolve a \`Responsive<T>\` at the active breakpoint (mobile-first cascade). */
export function resolveResponsive<T>(
  value: Responsive<T> | undefined,
  bp: Breakpoint,
): T | undefined {
  if (value == null) return undefined;
  if (typeof value !== "object" || Array.isArray(value)) return value as T;
  const obj = value as Partial<Record<Breakpoint, T>>;
  const idx = RESPONSIVE_KEYS.indexOf(bp);
  for (let i = idx; i >= 0; i--) {
    const key = RESPONSIVE_KEYS[i];
    if (key && key in obj) return obj[key];
  }
  return undefined;
}

export function responsiveDataAttrs(
  name: string,
  value: unknown,
): Record<string, string | undefined> {
  if (value == null || value === false) return {};
  if (typeof value === "object") {
    // Emit every declared key (including \`false\` at non-base) — the CSS
    // override pattern needs the explicit attribute to match against.
    const obj = value as Record<string, unknown>;
    const out: Record<string, string | undefined> = {};
    for (const key of RESPONSIVE_KEYS) {
      const v = obj[key];
      if (v == null) continue;
      // \`base: false\` has no attribute (absence-of) — emitting "false" would never match.
      if (key === "base" && v === false) continue;
      const attr = key === "base" ? \`data-\${name}\` : \`data-\${name}-\${key}\`;
      out[attr] = v === true ? "true" : v === false ? "false" : String(v);
    }
    return out;
  }
  return { [\`data-\${name}\`]: value === true ? "true" : String(value) };
}
"
`;
